--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.12MB/s(Youtube:不良林), server: 42.157.195.242, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-1.02MB/s(Youtube:不良林), server: 42.157.195.246, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 42.157.195.232, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-671.5KB/s(Youtube:不良林), server: 42.157.195.245, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-1.09MB/s(Youtube:不良林), server: 14.152.92.78, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇭🇰 香港-6.72MB/s(Youtube:不良林), server: jupiter.hk.v4.e1dns.com, port: 443, type: vmess, uuid: 4a9e6b6e-ec2c-4b89-9df6-5118fa07f1d7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-4.91MB/s(Youtube:不良林), server: jgw2.gaox.ml, port: 443, type: trojan, password: f2117e99-9b6e-47fd-b0a9-634a0b15b998, sni: jgw2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.89MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇨🇳 中国-431.5KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
-  - {name: 🇯🇵 日本-1.94MB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-790.7KB/s(Youtube:不良林), server: 14.152.92.76, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-930.5KB/s(Youtube:不良林), server: 42.157.195.244, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇫🇷 法国-2.27MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇳 中国-4.87MB/s(Youtube:不良林), server: mplsjs1.ggbbba.xyz, port: 56714, type: ss, cipher: aes-256-gcm, password: gDQ8kr1HdHEK5DGU}
+  - {name: 🇭🇰 香港-14.10MB/s(Youtube:不良林), server: jupiter.hk.v4.e1dns.com, port: 443, type: vmess, uuid: 4a9e6b6e-ec2c-4b89-9df6-5118fa07f1d7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 乌克兰-1.07MB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
+  - {name: 🇨🇳 中国-343.4KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
+  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 14.152.92.73, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2, server: 14.152.92.70, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3, server: 14.152.92.71, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-790.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-930.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-14.10MB/s(Youtube:不良林)
+      - 乌克兰-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-671.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.72MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-431.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-790.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-930.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-14.10MB/s(Youtube:不良林)
+      - 乌克兰-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-671.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.72MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-431.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-790.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-930.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-14.10MB/s(Youtube:不良林)
+      - 乌克兰-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-671.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.72MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-431.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-6.72MB/s(Youtube:不良林)
+      - 🇭🇰 香港-14.10MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-790.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-930.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-14.10MB/s(Youtube:不良林)
+      - 乌克兰-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-671.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.72MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-431.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-790.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-930.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-14.10MB/s(Youtube:不良林)
+      - 乌克兰-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-671.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.72MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-431.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-790.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-930.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-14.10MB/s(Youtube:不良林)
+      - 乌克兰-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-671.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.72MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-431.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-790.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-930.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-14.10MB/s(Youtube:不良林)
+      - 乌克兰-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-671.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.72MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-431.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
