--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 乌克兰-2.16MB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
+  - {name: 🇨🇳 中国-705.7KB/s(Youtube:不良林), server: 42.157.195.229, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
   - {name: 🇨🇳 中国-790.7KB/s(Youtube:不良林), server: 14.152.92.76, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-930.5KB/s(Youtube:不良林), server: 42.157.195.244, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇫🇷 法国-2.27MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇳 中国-4.87MB/s(Youtube:不良林), server: mplsjs1.ggbbba.xyz, port: 56714, type: ss, cipher: aes-256-gcm, password: gDQ8kr1HdHEK5DGU}
-  - {name: 🇭🇰 香港-14.10MB/s(Youtube:不良林), server: jupiter.hk.v4.e1dns.com, port: 443, type: vmess, uuid: 4a9e6b6e-ec2c-4b89-9df6-5118fa07f1d7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 乌克兰-1.07MB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
-  - {name: 🇨🇳 中国-343.4KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
-  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 14.152.92.73, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2, server: 14.152.92.70, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3, server: 14.152.92.71, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇷🇺 俄罗斯联邦-2.81MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇺🇸 美国-1.47MB/s(Youtube:不良林), server: iesei1ei.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: iesei1ei.com}}
+  - {name: 🇺🇸 美国-4.15MB/s(Youtube:不良林), server: 34.217.215.198, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇺🇸 美国-3.90MB/s(Youtube:不良林), server: 34.215.130.186, port: 10089, type: vmess, uuid: 3608c9dc-1eeb-48b0-b570-43074b4a0c9e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 34.215.130.186}}
+  - {name: 🇺🇸 美国-474.2KB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s1.upyun.online, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-738.3KB/s(Youtube:不良林), server: s2.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s2.upyun.online, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.62MB/s(Youtube:不良林), server: kr05.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr05.wangxd.life, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 乌克兰-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-705.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-790.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-930.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.87MB/s(Youtube:不良林)
-      - 🇭🇰 香港-14.10MB/s(Youtube:不良林)
-      - 乌克兰-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
+      - 🇷🇺 俄罗斯联邦-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-474.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-738.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 乌克兰-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-705.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-790.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-930.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.87MB/s(Youtube:不良林)
-      - 🇭🇰 香港-14.10MB/s(Youtube:不良林)
-      - 乌克兰-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
+      - 🇷🇺 俄罗斯联邦-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-474.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-738.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 乌克兰-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-705.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-790.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-930.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.87MB/s(Youtube:不良林)
-      - 🇭🇰 香港-14.10MB/s(Youtube:不良林)
-      - 乌克兰-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
+      - 🇷🇺 俄罗斯联邦-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-474.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-738.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-14.10MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 乌克兰-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-705.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-790.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-930.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.87MB/s(Youtube:不良林)
-      - 🇭🇰 香港-14.10MB/s(Youtube:不良林)
-      - 乌克兰-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
+      - 🇷🇺 俄罗斯联邦-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-474.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-738.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 乌克兰-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-705.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-790.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-930.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.87MB/s(Youtube:不良林)
-      - 🇭🇰 香港-14.10MB/s(Youtube:不良林)
-      - 乌克兰-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
+      - 🇷🇺 俄罗斯联邦-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-474.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-738.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 乌克兰-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-705.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-790.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-930.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.87MB/s(Youtube:不良林)
-      - 🇭🇰 香港-14.10MB/s(Youtube:不良林)
-      - 乌克兰-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
+      - 🇷🇺 俄罗斯联邦-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-474.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-738.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 乌克兰-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-705.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-790.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-930.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.87MB/s(Youtube:不良林)
-      - 🇭🇰 香港-14.10MB/s(Youtube:不良林)
-      - 乌克兰-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
+      - 🇷🇺 俄罗斯联邦-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-474.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-738.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
