--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 乌克兰-2.16MB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
-  - {name: 🇨🇳 中国-705.7KB/s(Youtube:不良林), server: 42.157.195.229, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-790.7KB/s(Youtube:不良林), server: 14.152.92.76, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇷🇺 俄罗斯联邦-2.81MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇺🇸 美国-1.47MB/s(Youtube:不良林), server: iesei1ei.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: iesei1ei.com}}
+  - {name: 🇨🇳 中国-1015.4KB/s(Youtube:不良林), server: 14.152.92.72, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 14.152.92.77, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1009.5KB/s(Youtube:不良林), server: 14.152.92.79, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.05MB/s(Youtube:不良林), server: 42.157.195.234, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-959.9KB/s(Youtube:不良林), server: 14.152.92.70, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
   - {name: 🇺🇸 美国-4.15MB/s(Youtube:不良林), server: 34.217.215.198, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
   - {name: 🇺🇸 美国-3.90MB/s(Youtube:不良林), server: 34.215.130.186, port: 10089, type: vmess, uuid: 3608c9dc-1eeb-48b0-b570-43074b4a0c9e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 34.215.130.186}}
   - {name: 🇺🇸 美国-474.2KB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s1.upyun.online, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 乌克兰-2.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-705.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-790.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1015.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1009.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-959.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-474.2KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 乌克兰-2.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-705.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-790.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1015.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1009.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-959.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-474.2KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 乌克兰-2.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-705.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-790.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1015.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1009.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-959.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-474.2KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 乌克兰-2.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-705.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-790.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1015.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1009.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-959.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-474.2KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 乌克兰-2.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-705.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-790.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1015.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1009.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-959.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-474.2KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 乌克兰-2.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-705.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-790.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1015.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1009.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-959.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-474.2KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 乌克兰-2.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-705.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-790.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1015.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1009.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-959.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-474.2KB/s(Youtube:不良林)
